--- a/Code_base/Product_Page/Product.HTML
+++ b/Code_base/Product_Page/Product.HTML
@@ -75,7 +75,7 @@
         <div class="Navbar">
           <div class="Home">
            
-            <a href="/Code_base/Home Page/Home.HTML" class="nav_hovered"> <img src="/Resources/Images/Nav_icon_1.png" alt="" /></a>
+            <a href="/Code_base/Home Page/Index.HTML" class="nav_hovered"> <img src="/Resources/Images/Nav_icon_1.png" alt="" /></a>
           </div>
           <div class="Movies">
            
