--- a/Code_base/TV Shows/TV.HTML
+++ b/Code_base/TV Shows/TV.HTML
@@ -79,7 +79,7 @@
       <nav>
         <div class="Navbar">
           <div class="Home">
-            <a href="/Code_base/Home Page/Index.HTML" class="nav_hovered">
+            <a href="/Code_base/Home Page/index.html" class="nav_hovered">
               <img src="/Resources/Images/Nav_icon_1.png" alt=""
             /></a>
           </div>
