--- a/Code_base/Home Page/Index.HTML
+++ b/Code_base/Home Page/Index.HTML
@@ -53,7 +53,7 @@
       sizes="180x180"
       href="/Resources/Images/apple-touch-icon.png"
     />
-    <link
+    <img
       rel="icon"
       type="image/png"
       sizes="64x64"
